[fix]: in upload page correct gap in header

--- a/src/layouts/InputLayout/InputLayout.module.css
+++ b/src/layouts/InputLayout/InputLayout.module.css
@@ -95,6 +95,10 @@
 
 .inputContainer {
   width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
+
 
   &.error {
     .errorText {
